--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>｛｛ page.title ｝｝ - @umihico</title>
+    <title> {{page.title}} - @umihico</title>
   </head>
 
   <body>
-    ｛｛ content ｝｝
+     {{content}}
   </body>
 </html>
