--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,17 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
-    <title> {{page.title}} - @umihico</title>
+    <link rel="stylesheet" href="css.css" type="text/css">
+    <script src="js/stickyfill.min.js"></script>
+    <script>$('.sticky').Stickyfill();</script>
   </head>
-
   <body>
-     {{content}}
+    <div class="wavebox">
+      <div class="wave"></div>
+      <div class="wave"></div>
+      <div class="wave"></div>
+    </div>
+    <div class="articlebox">
+      articlebox
+    </div>
   </body>
 </html>
