github pages test7

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <meta charset='utf-8'>
+    <title>{{page.title}} - @umihico</title>
     <link rel="stylesheet" href="css.css" type="text/css">
     <script src="js/stickyfill.min.js"></script>
     <script>$('.sticky').Stickyfill();</script>
@@ -11,7 +13,7 @@
       <div class="wave"></div>
     </div>
     <div class="articlebox">
-      articlebox
+      {{content}}
     </div>
   </body>
 </html>
