github pages test8

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset='utf-8'>
     <title>{{page.title}} - @umihico</title>
-    <link rel="stylesheet" href="css.css" type="text/css">
+    <link rel="stylesheet" href="git-powered-philosophy/layout/css.css" type="text/css">
     <script src="js/stickyfill.min.js"></script>
     <script>$('.sticky').Stickyfill();</script>
   </head>
