--- a/layout/css.css
+++ b/layout/css.css
@@ -17,18 +17,29 @@ body {
 }
 .wave {
   border-color: #0af;
-  border-style: double;
+  border-style: solid;
   height: 150%;
   width: 150%;
   transform-origin: 50% 48%;
-  border-radius: 30% 70% 70% 30% / 40% 40% 60% 60% ;
   position: absolute;
   top: -25%;
   left: -25%;
 }
-.wave:nth-child(1) {animation: drift 30000ms infinite linear;}
-.wave:nth-child(2) {animation: drift 50000ms infinite linear;}
-.wave:nth-child(3) {animation: drift 70000ms infinite linear;}
+.wave:nth-child(1) {
+  border-radius: 30% 70% 70% 30% / 40% 40% 60% 60% ;
+  animation: drift 30000ms infinite linear;
+  animation-delay: -10s;
+}
+.wave:nth-child(2) {
+  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70% ;
+  animation: drift 50000ms infinite linear;
+  animation-delay: -5s;
+}
+.wave:nth-child(3) {
+  border-radius: 44% 56% 17% 83% / 40% 65% 35% 60% ;
+  animation: drift 70000ms infinite linear;
+  animation-delay: 0s;
+}
 @keyframes drift {
   from {
     -webkit-transform: rotate(0deg);
