test article upload2

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
       <div class="wave"></div>
     </div>
     <div class="articlebox">
+      <h2>gitで綴る哲学 by umihico</h2>
+      <h1>{{page.title}}</h1>
       <div class="dynamic-content">
         {{content}}
       </div>
