test article upload3

--- a/layout/css.css
+++ b/layout/css.css
@@ -73,24 +73,24 @@ h3 {
 
 
 
-blockquote>blockquote {
+blockquote>p {
   font-size: 1em;
   font-weight:normal;
   margin-left:-2em;
   /* text-indent:4em; */
 }
-blockquote>blockquote:before {
+blockquote>p:before {
   content: "ティコ　";
   font-size: 1.1em;
   font-weight:bold;
 }
 
-blockquote>h1 {
+blockquote>blockquote {
   font-size: 1em;
   font-weight:normal;
   margin-left:-2em;
 }
-blockquote>h1:before {
+blockquote>blockquote:before {
   font-size: 1.1em;
   font-weight:bold;
   content: "青年　　";
