--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,3 @@
-<html>
   <head>
     <link rel="stylesheet" href="css.css" type="text/css">
     <meta charset='utf-8'>
@@ -14,7 +13,7 @@
       <div class="wave"></div>
     </div>
     <div class="articlebox">
-      <h2>gitで綴る哲学 by umihico</h2>
+      <h2>gitで綴る哲学 @umihico</h2>
       <h1>{{page.title}}</h1>
       <div class="dynamic-content">
         {{content}}
