--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
   <head>
-    <link rel="stylesheet" href="css.css" type="text/css">
+    <link rel="stylesheet" href="/git-powered-philosophy/layout/css.css" type="text/css">
     <meta charset='utf-8'>
     <title>gitで綴る哲学 - {{page.title}}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
