--- a/layout/css.css
+++ b/layout/css.css
@@ -15,6 +15,16 @@ body {
   top: 0;
   overflow: hidden;
 }
+a {
+	display: inline-block;
+	padding: 0.1em 0.3em;
+  color: #0af;
+	transition: all .3s;
+}
+a:hover {
+	color: #fff;
+	background-color: #0af;
+}
 .wave {
   border-color: #0af;
   border-style: solid;
