--- a/layout/testcss.css
+++ b/layout/testcss.css
@@ -70,15 +70,9 @@ a:hover {
 	color: #fff;
 	background-color: #0af;
 }
-.tjikko:before {
-  content: "ティコ";
+.name {
   font-size: 1.1em;
   font-weight:bold;
-}
-.man:before {
-  font-size: 1.1em;
-  font-weight:bold;
-  content: "青年";
 }
 
 p {
@@ -86,8 +80,8 @@ p {
   padding-left: 1em;
 }
 blockquote {
-  text-indent: 0em;
-  padding-left: 0em;
+  padding:0;
+  margin:0;
   color: #666;
   font-weight:bold;
 }
