--- a/_layouts/test_default.html
+++ b/_layouts/test_default.html
@@ -1,3 +1,4 @@
+<html>
   <head>
     <link rel="stylesheet" href="/git-powered-philosophy/layout/testcss.css" type="text/css">
     <meta charset='utf-8'>
@@ -5,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="js/stickyfill.min.js"></script>
     <script>$('.sticky').Stickyfill();</script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
   <body>
     <div class="wavebox">
@@ -14,7 +16,7 @@
     </div>
     <div class="articlebox">
       <h2>gitで綴る哲学 @umihico</h2>
-      <h1>{{page.title}}</h1>
+      <h1>{{page.title}}<a class="github-button" href="https://github.com/umihico" data-show-count="true" aria-label="Follow @umihico on GitHub">Follow @umihico</a><a class="github-button" href="https://github.com/umihico/git-powered-philosophy" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/git-powered-philosophy on GitHub">Star</a><a class="github-button" href="https://github.com/umihico/git-powered-philosophy/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/git-powered-philosophy on GitHub">Issue</a></h1>
       <div class="dynamic-content">
         {{content}}
       </div>
