--- a/_layouts/testcss.css
+++ b/_layouts/testcss.css
@@ -15,16 +15,7 @@ body {
   top: 0;
   overflow: hidden;
 }
-a {
-	display: inline-block;
-	padding: 0.1em 0.3em;
-  color: #0af;
-	transition: all .3s;
-}
-a:hover {
-	color: #fff;
-	background-color: #0af;
-}
+
 .wave {
   border-color: #0af;
   border-style: solid;
@@ -69,40 +60,28 @@ a:hover {
   background-color: rgba(255,255,255,0.8);
   z-index: 100;
 }
-
-h1 {
-  font-size: 1.5em;
+a {
+	display: inline-block;
+	padding: 0.1em 0.3em;
+  color: #0af;
+	transition: all .3s;
 }
-h2 {
-  font-size: 1.17em;
+a:hover {
+	color: #fff;
+	background-color: #0af;
 }
-h3 {
-  font-size: 1em;
-  color: #555;
-}
-
-
-
-
-blockquote>h1 {
-  font-size: 1em;
-  font-weight:normal;
-  margin-left:-2em;
-  /* text-indent:4em; */
-}
-blockquote>h1:before {
-  content: "ティコ　";
+.name {
   font-size: 1.1em;
   font-weight:bold;
 }
 
-blockquote>p {
-  font-size: 1em;
-  font-weight:normal;
-  margin-left:-2em;
+p {
+  text-indent: 1em;
+  padding-left: 1em;
 }
-blockquote>p:before {
-  font-size: 1.1em;
+blockquote {
+  padding:0;
+  margin:0;
+  color: #666;
   font-weight:bold;
-  content: "青年　　";
 }
