--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,8 @@
       <div class="wave"></div>
     </div>
     <div class="articlebox">
-      <h2>gitで綴る哲学 @umihico</h2>
-      <h1>{{page.title}}<a class="github-button" href="https://github.com/umihico" data-show-count="true" aria-label="Follow @umihico on GitHub">Follow @umihico</a><a class="github-button" href="https://github.com/umihico/git-powered-philosophy" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/git-powered-philosophy on GitHub">Star</a><a class="github-button" href="https://github.com/umihico/git-powered-philosophy/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/git-powered-philosophy on GitHub">Issue</a></h1>
+      <h2>gitで綴る哲学 <a class="github-button" href="https://github.com/umihico" data-show-count="true" aria-label="Follow @umihico on GitHub">Follow @umihico</a> <a class="github-button" href="https://github.com/umihico/git-powered-philosophy" data-icon="octicon-star" data-show-count="true" aria-label="Star umihico/git-powered-philosophy on GitHub">Star</a> <a class="github-button" href="https://github.com/umihico/git-powered-philosophy/issues" data-icon="octicon-issue-opened" data-show-count="true" aria-label="Issue umihico/git-powered-philosophy on GitHub">Issue</a></h2>
+      <h1>{{page.title}}</h1>
       <div class="dynamic-content">
         {{content}}
       </div>
