--- a/test/css_test.css
+++ b/test/css_test.css
@@ -64,6 +64,7 @@ a {
 	display: inline-block;
 	padding: 0.1em 0.3em;
   color: #0af;
+
 	transition: all .3s;
 }
 a:hover {
@@ -84,4 +85,7 @@ blockquote {
   margin:0;
   color: #666;
   font-weight:bold;
+}
+.sanko {
+  color: #0f0;
 }
